--- a/.github/workflows/03-preview-url-pr-description.yml
+++ b/.github/workflows/03-preview-url-pr-description.yml
@@ -19,4 +19,4 @@ jobs:
         with:
           script: |
             const { default: previewUrlPrDescription } = await import('${{ github.workspace }}/scripts/github/preview-url-pr-description.js');
-            return await previewUrlPrDescription(github, context);
+            return await previewUrlPrDescription({github, context});
