refactor: added missing aspects that got reported by our linting tools

--- a/showcases/angular-ssr-showcase/package.json
+++ b/showcases/angular-ssr-showcase/package.json
@@ -1,7 +1,14 @@
 {
   "name": "angular-ssr-showcase",
   "version": "0.0.0",
+  "description": "An Angular application that demonstrates server-side rendering (SSR) capabilities.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/db-ux-design-system/core-web.git"
+  },
+  "license": "Apache-2.0",
   "private": true,
+  "files": [],
   "scripts": {
     "build": "ng build && cpr ./dist/angular-ssr-showcase/ ../../build-showcases/angular-ssr-showcase/ -d",
     "build:debug": "ng build --optimization=false",
