--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,29 +14,18 @@ jobs:
   init:
     uses: ./.github/workflows/00-init.yml
     secrets: inherit
-
-  get-playwright-version:
-    uses: ./.github/workflows/01-get-playwright-version.yml
-    needs: [init]
-
-  get-publish-version:
-    uses: ./.github/workflows/01-get-publish-version.yml
-    needs: [init]
-
-  repo-settings:
-    uses: ./.github/workflows/00-repository-settings.yml
-    needs: [get-publish-version]
     with:
-      release: ${{ needs.get-publish-version.outputs.release }}
-      preRelease: ${{ needs.get-publish-version.outputs.preRelease }}
+      release: true
 
   lint:
-    uses: ./.github/workflows/01-lint.yml
+    uses: ./.github/workflows/01-lint-test.yml
     needs: [init]
 
   test:
-    uses: ./.github/workflows/01-test.yml
+    uses: ./.github/workflows/01-lint-test.yml
     needs: [init]
+    with:
+      test: true
 
   build-packages:
     uses: ./.github/workflows/01-build-packages.yml
@@ -44,9 +33,9 @@ jobs:
 
   init-playwright:
     uses: ./.github/workflows/01-init-playwright.yml
-    needs: [get-playwright-version]
+    needs: [init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
 
   build-outputs:
     uses: ./.github/workflows/01-build-outputs.yml
@@ -54,43 +43,43 @@ jobs:
 
   test-components:
     uses: ./.github/workflows/02-e2e.yml
-    needs: [build-packages, get-playwright-version]
+    needs: [build-packages, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
 
   test-foundations:
     uses: ./.github/workflows/02-e2e-foundations.yml
-    needs: [build-packages, get-playwright-version]
+    needs: [build-packages, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
 
   build-storybook-composition:
     uses: ./.github/workflows/01-build-storybooks.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
       storybook: storybook
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   build-storybook-angular:
     uses: ./.github/workflows/01-build-storybooks.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
       storybook: angular-storybook
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   build-storybook-react:
     uses: ./.github/workflows/01-build-storybooks.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
       storybook: react-storybook
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   build-storybook-vue:
     uses: ./.github/workflows/01-build-storybooks.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
       storybook: vue-storybook
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   build-showcase-stencil:
     uses: ./.github/workflows/01-build-showcases.yml
@@ -136,50 +125,50 @@ jobs:
 
   build-showcase-patternhub:
     uses: ./.github/workflows/01-build-patternhub.yml
-    needs: [build-packages, get-publish-version, repo-settings]
+    needs: [build-packages, init]
     with:
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   test-showcase-stencil:
     uses: ./.github/workflows/02-e2e-showcases.yml
-    needs: [build-showcase-stencil, get-playwright-version]
+    needs: [build-showcase-stencil, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       showcase: stencil-showcase
 
   test-showcase-angular:
     uses: ./.github/workflows/02-e2e-showcases.yml
-    needs: [build-showcase-angular, get-playwright-version]
+    needs: [build-showcase-angular, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       showcase: angular-showcase
 
   test-showcase-react:
     uses: ./.github/workflows/02-e2e-showcases.yml
-    needs: [build-showcase-react, get-playwright-version]
+    needs: [build-showcase-react, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       showcase: react-showcase
 
   test-showcase-vue:
     uses: ./.github/workflows/02-e2e-showcases.yml
-    needs: [build-showcase-vue, get-playwright-version]
+    needs: [build-showcase-vue, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       showcase: vue-showcase
 
   test-showcase-patternhub:
     uses: ./.github/workflows/02-e2e-patternhub.yml
-    needs: [build-showcase-patternhub, get-playwright-version, repo-settings]
+    needs: [build-showcase-patternhub, init, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   test-screen-reader:
     uses: ./.github/workflows/02-e2e-screen-reader.yml
-    needs: [build-showcase-react, init-playwright, get-playwright-version]
+    needs: [build-showcase-react, init-playwright, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
 
   checks-done:
     if: ${{ !cancelled() }}
@@ -262,19 +251,19 @@ jobs:
 
   deploy:
     uses: ./.github/workflows/03-deploy-gh-pages.yml
-    needs: [checks-done, get-publish-version, repo-settings]
+    needs: [checks-done, init]
     with:
-      release: ${{ needs.get-publish-version.outputs.release }}
-      preRelease: ${{ needs.get-publish-version.outputs.preRelease }}
-      name: ${{ needs.repo-settings.outputs.name }}
-      repoName: ${{ needs.repo-settings.outputs.repoName }}
-      repoOwner: ${{ needs.repo-settings.outputs.repoOwner }}
+      release: ${{ needs.init.outputs.release }}
+      preRelease: ${{ needs.init.outputs.preRelease }}
+      name: ${{ needs.init.outputs.branchName }}
+      repoName: ${{ needs.init.outputs.repoName }}
+      repoOwner: ${{ needs.init.outputs.repoOwner }}
 
   publishpackages:
     uses: ./.github/workflows/03-publish-packages.yml
-    needs: [get-publish-version, checks-done, build-outputs]
+    needs: [init, checks-done, build-outputs]
     secrets: inherit
     with:
-      release: ${{ needs.get-publish-version.outputs.release }}
-      preRelease: ${{ needs.get-publish-version.outputs.preRelease }}
-      version: ${{ needs.get-publish-version.outputs.version }}
+      release: ${{ needs.init.outputs.release }}
+      preRelease: ${{ needs.init.outputs.preRelease }}
+      version: ${{ needs.init.outputs.version }}
