--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -33,17 +33,26 @@ jobs:
 
   scan-secrets:
     if: github.event.pull_request == null || github.event.pull_request.head.repo.owner.login == 'db-ux-design-system'
-    uses: ./.github/workflows/00-scan-secrets.yml
+    runs-on: ubuntu-24.04 # Use Ubuntu 24.04 explicitly
+    steps:
+      - name: ⏬ Checkout repo
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
 
-  repo-settings:
-    uses: ./.github/workflows/00-repository-settings.yml
-
-  get-playwright-version:
-    uses: ./.github/workflows/01-get-playwright-version.yml
-    needs: [init]
+      # https://github.com/marketplace/actions/trufflehog-oss#advanced-usage-scan-entire-branch
+      - name: 🐷 TruffleHog OSS
+        if: ${{ github.event.pull_request != null }} # only scan on pull-requests
+        uses: trufflesecurity/trufflehog@main
+        with:
+          # Setting base to an empty string scans the entire branch, per TruffleHog OSS advanced usage:
+          # https://github.com/marketplace/actions/trufflehog-oss#advanced-usage-scan-entire-branch
+          base: ""
+          head: ${{ github.ref_name }}
+          extra_args: --results=verified,unknown
 
   lint:
-    uses: ./.github/workflows/01-lint.yml
+    uses: ./.github/workflows/01-lint-test.yml
     needs: [init]
 
   cancel-on-failure-lint:
@@ -53,8 +62,10 @@ jobs:
     needs: [lint]
 
   test:
-    uses: ./.github/workflows/01-test.yml
+    uses: ./.github/workflows/01-lint-test.yml
     needs: [init]
+    with:
+      test: true
 
   cancel-on-failure-test:
     if: ${{ needs.test.result == 'failure' }}
@@ -74,9 +85,9 @@ jobs:
 
   init-playwright:
     uses: ./.github/workflows/01-init-playwright.yml
-    needs: [get-playwright-version]
+    needs: [init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
 
   build-outputs:
     uses: ./.github/workflows/01-build-outputs.yml
@@ -90,9 +101,9 @@ jobs:
 
   test-components:
     uses: ./.github/workflows/02-e2e.yml
-    needs: [build-packages, get-playwright-version]
+    needs: [build-packages, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
 
   cancel-on-failure-test-components:
     if: ${{ needs.test-components.result == 'failure' }}
@@ -102,9 +113,9 @@ jobs:
 
   test-foundations:
     uses: ./.github/workflows/02-e2e-foundations.yml
-    needs: [build-packages, get-playwright-version]
+    needs: [build-packages, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
 
   cancel-on-failure-test-foundations:
     if: ${{ needs.test-foundations.result == 'failure' }}
@@ -114,35 +125,35 @@ jobs:
 
   build-storybook-composition:
     uses: ./.github/workflows/01-build-storybooks.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
       storybook: storybook
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   build-storybook-angular:
     uses: ./.github/workflows/01-build-storybooks.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
       storybook: angular-storybook
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   build-storybook-react:
     uses: ./.github/workflows/01-build-storybooks.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
       storybook: react-storybook
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   build-storybook-vue:
     uses: ./.github/workflows/01-build-storybooks.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
       storybook: vue-storybook
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   build-showcase-stencil:
     uses: ./.github/workflows/01-build-showcases.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
       showcase: stencil-showcase
 
@@ -226,9 +237,9 @@ jobs:
 
   build-showcase-patternhub:
     uses: ./.github/workflows/01-build-patternhub.yml
-    needs: [build-packages, repo-settings]
+    needs: [build-packages, init]
     with:
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   cancel-on-failure-build-showcase-patternhub:
     if: ${{ needs.build-showcase-patternhub.result == 'failure' }}
@@ -238,9 +249,9 @@ jobs:
 
   test-showcase-stencil:
     uses: ./.github/workflows/02-e2e-showcases.yml
-    needs: [build-showcase-stencil, get-playwright-version]
+    needs: [build-showcase-stencil, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       showcase: stencil-showcase
 
   cancel-on-failure-test-showcase-stencil:
@@ -251,9 +262,9 @@ jobs:
 
   test-showcase-angular:
     uses: ./.github/workflows/02-e2e-showcases.yml
-    needs: [build-showcase-angular, get-playwright-version]
+    needs: [build-showcase-angular, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       showcase: angular-showcase
 
   cancel-on-failure-test-showcase-angular:
@@ -264,9 +275,9 @@ jobs:
 
   test-showcase-react:
     uses: ./.github/workflows/02-e2e-showcases.yml
-    needs: [build-showcase-react, get-playwright-version]
+    needs: [build-showcase-react, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       showcase: react-showcase
 
   cancel-on-failure-test-showcase-react:
@@ -277,9 +288,9 @@ jobs:
 
   test-showcase-vue:
     uses: ./.github/workflows/02-e2e-showcases.yml
-    needs: [build-showcase-vue, get-playwright-version]
+    needs: [build-showcase-vue, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       showcase: vue-showcase
 
   cancel-on-failure-test-showcase-vue:
@@ -290,10 +301,10 @@ jobs:
 
   test-showcase-patternhub:
     uses: ./.github/workflows/02-e2e-patternhub.yml
-    needs: [build-showcase-patternhub, get-playwright-version, repo-settings]
+    needs: [build-showcase-patternhub, init, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
-      baseUrl: ${{ needs.repo-settings.outputs.baseUrl }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
+      baseUrl: ${{ needs.init.outputs.baseUrl }}
 
   cancel-on-failure-test-showcase-patternhub:
     if: ${{ needs.test-showcase-patternhub.result == 'failure' }}
@@ -305,31 +316,26 @@ jobs:
     if: ${{ !cancelled() && needs.test-components.result == 'failure' }}
     uses: ./.github/workflows/02-e2e-regenerate.yml
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       type: components
-    needs: [test-components, get-playwright-version]
+    needs: [test-components, init]
 
   regenerate-snapshots-foundations:
     if: ${{ !cancelled() && needs.test-foundations.result == 'failure' }}
     uses: ./.github/workflows/02-e2e-regenerate.yml
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       type: foundations
-    needs: [test-foundations, get-playwright-version]
+    needs: [test-foundations, init]
 
   regenerate-snapshots-patternhub:
     if: ${{ !cancelled() && needs.test-showcase-patternhub.result == 'failure' }}
     uses: ./.github/workflows/02-e2e-regenerate.yml
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       path: ${{ needs.build-showcase-patternhub.outputs.path }}
       type: patternhub
-    needs:
-      [
-        build-showcase-patternhub,
-        test-showcase-patternhub,
-        get-playwright-version
-      ]
+    needs: [build-showcase-patternhub, test-showcase-patternhub, init]
 
   # This job runs only if aria-snapshots were changed compared to main or if it runs on main branch
   test-screen-reader:
@@ -337,9 +343,9 @@ jobs:
       needs.test-showcase-react.outputs.aria-snapshots-changed-to-main == 'true' ||
       github.event.pull_request == null
     uses: ./.github/workflows/02-e2e-screen-reader.yml
-    needs: [test-showcase-react, init-playwright, get-playwright-version]
+    needs: [test-showcase-react, init-playwright, init]
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
 
   regenerate-snapshots:
     if: |
@@ -356,15 +362,9 @@ jobs:
       )
     uses: ./.github/workflows/02-e2e-regenerate.yml
     with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+      version: ${{ needs.init.outputs.playwrightVersion }}
       type: showcases
-    needs:
-      [
-        test-showcase-angular,
-        test-showcase-react,
-        test-showcase-vue,
-        get-playwright-version
-      ]
+    needs: [test-showcase-angular, test-showcase-react, test-showcase-vue, init]
 
   commit-regenerated-snapshots:
     uses: ./.github/workflows/02-e2e-regenerated-snapshots-commit.yml
@@ -475,10 +475,10 @@ jobs:
       !cancelled() && github.actor != 'dependabot[bot]' &&
       (github.event.pull_request == null || github.event.pull_request.head.repo.owner.login == 'db-ux-design-system')
       }}
-    needs: [checks-done, repo-settings]
+    needs: [checks-done, init]
     with:
       release: false
       preRelease: false
-      name: ${{ needs.repo-settings.outputs.name }}
-      repoName: ${{ needs.repo-settings.outputs.repoName }}
-      repoOwner: ${{ needs.repo-settings.outputs.repoOwner }}
+      name: ${{ needs.init.outputs.name }}
+      repoName: ${{ needs.init.outputs.repoName }}
+      repoOwner: ${{ needs.init.outputs.repoOwner }}
