--- a/.github/workflows/01-lint-test.yml
+++ b/.github/workflows/01-lint-test.yml
@@ -5,17 +5,15 @@ permissions:
 
 on:
   workflow_call:
-    inputs:
-      test:
-        required: false
-        default: false
-        type: boolean
 
 jobs:
   lint:
     name: Lint
-    if: ${{ !inputs.test }}
     runs-on: ubuntu-24.04 # Use Ubuntu 24.04 explicitly
+    strategy:
+      fail-fast: false
+      matrix:
+        command: ["lint", "test"]
     steps:
       - name: ⏬️ Checkout repo
         uses: actions/checkout@v5
@@ -24,21 +22,12 @@ jobs:
         uses: ./.github/actions/npm-cache
 
       - name: ⚡ Run Lint
+        if: ${{ matrix.command == 'lint' }}
         run: |
           npm run postinstall --workspace=nuxt-showcase
           npm run build --workspace=@db-ux/core-stylelint
           npm run lint
 
-  test:
-    name: Test
-    if: ${{ inputs.test }}
-    runs-on: ubuntu-24.04 # Use Ubuntu 24.04 explicitly
-    steps:
-      - name: ⏬️ Checkout repo
-        uses: actions/checkout@v5
-
-      - name: 🔄 Init Cache
-        uses: ./.github/actions/npm-cache
-
       - name: ⚡ Run Test
+        if: ${{ matrix.command == 'test' }}
         run: npm run test
