--- a/packages/agent-cli/package.json
+++ b/packages/agent-cli/package.json
@@ -11,7 +11,7 @@
   "bin": {
     "@db-ux/agent-cli": "build/index.js"
   },
-  "main": "build.js",
+  "main": "build/index.js",
   "files": [
     "build"
   ],
