--- a/packages/agent-cli/package.json
+++ b/packages/agent-cli/package.json
@@ -18,9 +18,9 @@
   "scripts": {
     "build": "node esbuild.js",
     "copy-build": "npm-run-all copy-build:*",
-    "copy-build:build": "cpr build ../../build-outputs/agent-cli/build -o",
-    "copy-build:package.json": "cpr package.json ../../build-outputs/agent-cli/package.json -o",
-    "copy-build:readme": "cpr README.md ../../build-outputs/agent-cli/README.md -o",
+    "copy-build:build": "cpr build ../../build-outputs/agent-cli/build --overwrite",
+    "copy-build:package.json": "cpr package.json ../../build-outputs/agent-cli/package.json --overwrite",
+    "copy-build:readme": "cpr README.md ../../build-outputs/agent-cli/README.md --overwrite",
     "test": "vitest run --config vitest.config.ts",
     "test:cli": "tsx src/cli.ts --help"
   },
