--- a/packages/agent-cli/package.json
+++ b/packages/agent-cli/package.json
@@ -13,7 +13,8 @@
   },
   "main": "build/index.js",
   "files": [
-    "build"
+    "build",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "build": "node esbuild.js",
