chore: preview branch output inside description instead of comment (#5140)
* chore: add preview-url-pr-description to preview branch output

* fix: add cancelled() to preview-url-pr-description

* fix: issue with missing checkout

* fix: refactor previewUrlPrDescription to destructure parameters and improve readability

* fix: refactor previewUrlPrDescription to destructure parameters and improve readability

* Update .github/workflows/03-preview-url-pr-description.yml

Co-authored-by: Michael Kraus <michael.m.kraus@deutschebahn.com>

* auto update snapshots (#5158)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* auto update snapshots (#5160)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

---------

Co-authored-by: Michael Kraus <michael.m.kraus@deutschebahn.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -394,3 +394,8 @@ jobs:
     with:
       release: false
       preRelease: false
+
+  preview-url-pr-description:
+    if: ${{ !cancelled() && github.event.pull_request != null }}
+    needs: [deploy]
+    uses: ./.github/workflows/03-preview-url-pr-description.yml
