--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -29,7 +29,7 @@
     "build:06_ts": "tsc",
     "clean": "rm --recursive --force build",
     "copy-build": "npm-run-all copy-build:*",
-    "copy-build:agent": "cpr agent ../../build-outputs/foundations/agent -o",
+    "copy-build:agent": "cpr agent ../../build-outputs/foundations/agent --overwrite",
     "copy-build:assets": "cpr assets ../../build-outputs/foundations/assets --overwrite",
     "copy-build:package.json": "cpr package.json ../../build-outputs/foundations/package.json --overwrite",
     "copy-build:readme": "cpr README.md ../../build-outputs/foundations/README.md --overwrite",
