--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -39,7 +39,7 @@
     "dev:scss": "npm run build-style:01_sass -- --watch --source-map",
     "dev:stencil": "nodemon --watch src --watch scripts --ext tsx,ts --exec \"npm run compile:stencil\"",
     "dev:vue": "nodemon --watch src --watch scripts --ext tsx,ts --exec \"npm run compile:vue\"",
-    "generate:agent": "mitosis build -c configs/mitosis.agent.config.cjs",
+    "generate:agent": "mitosis build --config=configs/mitosis.agent.config.cjs",
     "generate:component": "hygen mitosis new",
     "generate:docs": "hygen update-docs new",
     "prepack": "npm run copy-assets",
