--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "@angular/ssr": "19.2.17",
     "@axe-core/playwright": "4.10.2",
     "@babel/eslint-parser": "7.28.4",
-    "@changesets/cli": "^2.29.5",
+    "@changesets/cli": "2.29.7",
+    "@changesets/types": "6.1.0",
     "@commitlint/cli": "20.1.0",
     "@commitlint/config-conventional": "20.0.0",
     "@db-ux/db-theme": "5.2.0",
