chore: changing format

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -20,6 +20,6 @@
 	"ignore": ["scripts"],
 	"linked": [],
 	"access": "public",
-	"baseBranch": "main",
+	"baseBranch": "origin/main",
 	"updateInternalDependencies": "patch"
 }
