--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config/schema.json",
-	"changelog": "@changesets/changelog-git",
+	"changelog": [
+		"scripts/github/changesets/create-changelog.js",
+		{ "owner": "db-ux-design-system", "repo": "core-web" }
+	],
 	"commit": false,
 	"fixed": [
 		[
@@ -17,6 +20,6 @@
 	"ignore": ["scripts"],
 	"linked": [],
 	"access": "public",
-	"baseBranch": "main",
+	"baseBranch": "origin/main",
 	"updateInternalDependencies": "patch"
 }
