--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -12,8 +12,8 @@
   "types": "./build/index.d.ts",
   "module": "./build/index.js",
   "files": [
-    "agent",
     "CHANGELOG.md",
+    "agent",
     "assets",
     "build"
   ],
@@ -38,6 +38,7 @@
     "copy-prepare:normalize": "cpr ../../node_modules/@csstools/normalize.css/normalize.css scss/_normalize.scss --overwrite",
     "copy:scss": "cpr scss build/styles --overwrite",
     "dev": "vite --open",
+    "generate:fallback-icon-font": "tsx scripts/local/generate-fallback-icon-font.ts",
     "generate:fonts": "tsx assets/fonts/generate-eu-fonts.ts",
     "generate:icons": "tsx scripts/local/generate-icon-font.ts",
     "postcopy-prepare:icon-overview": "prettier dev/icons.html --write",
