--- a/.github/ISSUE_TEMPLATE/github_copilot_instructions.yaml
+++ b/.github/ISSUE_TEMPLATE/github_copilot_instructions.yaml
@@ -89,3 +89,35 @@ body:
       placeholder: e.g. Line 32 in .github/copilot-instructions.md or a permalink to the file
     validations:
       required: false
+
+  - type: dropdown
+    id: businessunit
+    attributes:
+      label: Which DB business unit do you work for?
+      options:
+        - DB Systel GmbH (please name your customer below)
+        - DB Fernverkehr AG
+        - DB Regio AG
+        - DB InfraGO AG
+        - DB Cargo AG
+        - DB Konzern
+        - DB Vertrieb GmbH
+        - DB Energie
+        - DB Connect
+        - other (please specify below)
+    validations:
+      required: false
+
+  - type: input
+    id: businessunit2
+    attributes:
+      label: ”DB Systel” please enter your customer / ”other” please enter your area or business unit.
+    validations:
+      required: false
+
+  - type: input
+    id: project
+    attributes:
+      label: What project are you working on?
+    validations:
+      required: false
