--- a/.github/ISSUE_TEMPLATE/github_copilot_instructions.yaml
+++ b/.github/ISSUE_TEMPLATE/github_copilot_instructions.yaml
@@ -1,7 +1,7 @@
 name: 📄 GitHub Copilot Instructions feedback
 description: Share feedback about the .github/copilot-instructions.md documentation (model choice, prompt results, clarity, etc.).
 title: "[GitHub Copilot Instructions feedback]: "
-labels: [documentation, copilot]
+labels: [📕documentation, 💡copilot]
 body:
   - type: markdown
     attributes:
