--- a/output/stencil/package.json
+++ b/output/stencil/package.json
@@ -26,6 +26,7 @@
     "build:cem": "cem analyze",
     "mv:dist": "cpr dist ../../build-outputs/wc-core-components/dist -o",
     "mv:agent": "cpr agent ../../build-outputs/wc-core-components/agent --overwrite",
+    "mv:changelog": "cpr CHANGELOG.md ../../build-outputs/wc-core-components/CHANGELOG.md --overwrite",
     "mv:package.json": "cpr package.json ../../build-outputs/wc-core-components/package.json -o",
     "mv:readme": "cpr README.md ../../build-outputs/wc-core-components/README.md -o",
     "postbuild": "npm-run-all --parallel build:* --parallel mv:*",
