--- a/output/angular/package.json
+++ b/output/angular/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "ng build",
     "mv:agent": "cpr agent ../../build-outputs/angular/agent --overwrite",
+    "mv:changelog": "cpr CHANGELOG.md ../../build-outputs/angular/CHANGELOG.md --overwrite",
     "ng": "ng",
     "postbuild": "npm-run-all --parallel mv:*",
     "start": "ng serve"
