--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -12,8 +12,8 @@
   "types": "./build/index.d.ts",
   "module": "./build/index.js",
   "files": [
-    "agent",
     "CHANGELOG.md",
+    "agent",
     "assets",
     "build"
   ],
@@ -31,6 +31,7 @@
     "copy-build": "npm-run-all copy-build:*",
     "copy-build:agent": "cpr agent ../../build-outputs/foundations/agent --overwrite",
     "copy-build:assets": "cpr assets ../../build-outputs/foundations/assets --overwrite",
+    "copy-build:changelog": "cpr CHANGELOG.md ../../build-outputs/foundations/CHANGELOG.md --overwrite",
     "copy-build:package.json": "cpr package.json ../../build-outputs/foundations/package.json --overwrite",
     "copy-build:readme": "cpr README.md ../../build-outputs/foundations/README.md --overwrite",
     "copy-build:web": "cpr build ../../build-outputs/foundations/build --overwrite",
