--- a/packages/migration/package.json
+++ b/packages/migration/package.json
@@ -20,6 +20,7 @@
     "build": "node esbuild.js",
     "copy-build": "npm-run-all copy-build:*",
     "copy-build:build": "cpr build ../../build-outputs/migration/build -o",
+    "copy-build:changelog": "cpr CHANGELOG.md ../../build-outputs/migration/CHANGELOG.md --overwrite",
     "copy-build:package.json": "cpr package.json ../../build-outputs/migration/package.json -o",
     "copy-build:readme": "cpr README.md ../../build-outputs/migration/README.md -o",
     "test": "vitest run --config vitest.config.ts",
