--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -272,7 +272,16 @@ jobs:
     with:
       version: ${{ needs.get-playwright-version.outputs.version }}
 
-  regenerate-snapshots:
+  should-regenerate-snapshots:
+    env:
+      ARIA_ANGULAR: ${{ needs.test-showcase-angular.outputs.aria-snapshots-changed }}
+      VISUAL_ANGULAR: ${{ needs.test-showcase-angular.outputs.visual-snapshots-changed }}
+      ARIA_REACT: ${{ needs.test-showcase-react.outputs.aria-snapshots-changed }}
+      VISUAL_REACT: ${{ needs.test-showcase-react.outputs.visual-snapshots-changed }}
+      ARIA_VUE: ${{ needs.test-showcase-vue.outputs.aria-snapshots-changed }}
+      VISUAL_VUE: ${{ needs.test-showcase-vue.outputs.visual-snapshots-changed }}
+      ARIA_STENCIL: ${{ needs.test-showcase-stencil.outputs.aria-snapshots-changed }}
+      VISUAL_STENCIL: ${{ needs.test-showcase-stencil.outputs.visual-snapshots-changed }}
     if: |
       !cancelled() && (
         needs.test-showcase-angular.result == 'failure' ||
@@ -283,19 +292,41 @@ jobs:
         needs.test-showcase-react.outputs.aria-snapshots-changed == 'true' ||
         needs.test-showcase-react.outputs.visual-snapshots-changed == 'true' ||
         needs.test-showcase-vue.outputs.aria-snapshots-changed == 'true' ||
-        needs.test-showcase-vue.outputs.visual-snapshots-changed == 'true'
+        needs.test-showcase-vue.outputs.visual-snapshots-changed == 'true' ||
+        needs.test-showcase-stencil.outputs.aria-snapshots-changed == 'true' ||
+        needs.test-showcase-stencil.outputs.visual-snapshots-changed == 'true'
       )
-    uses: ./.github/workflows/02-e2e-regenerate.yml
-    with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
-      type: showcases
     needs:
       [
         test-showcase-angular,
         test-showcase-react,
         test-showcase-vue,
-        get-playwright-version
+        test-showcase-stencil
       ]
+    runs-on: ubuntu-24.04
+    steps:
+      - name: "Fail if actor is a bot and regeneration is triggered"
+        run: |
+          if [[ "${{ github.actor }}" == *"[bot]"* ]]; then
+              echo "The snapshots between frameworks are different." >> $GITHUB_STEP_SUMMARY
+              echo "| Framework | Aria Snapshots Changed | Visual Snapshots Changed |" >> $GITHUB_STEP_SUMMARY
+              echo "|-----------|------------------------|--------------------------|" >> $GITHUB_STEP_SUMMARY
+              echo "| Angular   | "$ARIA_ANGULAR"  | "$VISUAL_ANGULAR" |" >> $GITHUB_STEP_SUMMARY
+              echo "| React     | "$ARIA_REACT"    | "$VISUAL_REACT"   |" >> $GITHUB_STEP_SUMMARY
+              echo "| Vue       | "$ARIA_VUE"      | "$VISUAL_VUE"     |" >> $GITHUB_STEP_SUMMARY
+              echo "| Stencil   | "$ARIA_STENCIL"  | "$VISUAL_STENCIL" |" >> $GITHUB_STEP_SUMMARY
+              exit 1
+          fi
+        shell: bash
+
+  regenerate-snapshots:
+    if: |
+      !cancelled() && needs.should-regenerate-snapshots.result == 'success'
+    uses: ./.github/workflows/02-e2e-regenerate.yml
+    with:
+      version: ${{ needs.get-playwright-version.outputs.version }}
+      type: showcases
+    needs: [should-regenerate-snapshots, get-playwright-version]
 
   commit-regenerated-snapshots:
     uses: ./.github/workflows/02-e2e-regenerated-snapshots-commit.yml
